--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/uuid": "^10.0.0",
+    "framer-motion": "^11.9.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "next": "^13.1.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/styled-components": "^5.1.26"
   }
 }
