--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
+    "@types/react": "^18.2.25",
     "@types/react-dom": "18.0.10",
     "@types/uuid": "^10.0.0",
     "framer-motion": "^11.9.0",
@@ -21,6 +21,8 @@
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.6.2",
